fix #viz overflow

--- a/app/src/styles/Home.scss
+++ b/app/src/styles/Home.scss
@@ -46,6 +46,8 @@
   position: absolute;
   top: 0;
 
+  overflow: hidden;
+
   canvas {
     z-index: 1010;
   }
